--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
-  "name": "json-dump-js",
+  "name": "@iogravity/json-dump",
   "version": "1.0.0",
-  "description": "",
+  "description": " Json Dump is a powerful cloud-based JSON storage software that allows you to store, manage, and query JSON data easily. With Json Dump, you can store your JSON data over the cloud securely, and access it anytime, anywhere. Whether you need to store data for your web or mobile applications, Json Dump has got you covered.",
   "main": "index.js",
   "scripts": {
     "test": "jest"
   },
   "keywords": [],
-  "author": "",
+  "author": "Iogravity",
   "license": "MIT",
   "devDependencies": {
     "jest": "^29.5.0"
   },
   "dependencies": {
     "axios": "^1.3.5"
-  }
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/iogravity/json-dump-js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/iogravity/json-dump-js/issues"
+  },
+  "homepage": "https://github.com/iogravity/json-dump-js#readme"
 }
